added prod pages

--- a/index.html
+++ b/index.html
@@ -88,12 +88,15 @@
   <div class="row">
     <div class="column-surf">
       <img src="assets/img/portfolio/rob.jpg" alt="Surf" style="width:100%">
+      <a href="surf-prod.html"><button class="styled-button-surf" type="button">SURF</button></a>
     </div>
     <div class="column-snow">
       <img src="assets/img/stew.jpeg" alt="Snow" style="width:100%">
+      <a href="snow-prod.html"><button class="styled-button-snow" type="button">SNOW</button></a>
     </div>
     <div class="column-skate">
       <img src="assets/img/portfolio/ollie.avif" alt="Skate" style="width:100%">
+      <a  href="skate-prod.html"><button class="styled-button-skate" type="button">SKATE</button></a>
     </div>
   </div> 
 </div>
@@ -632,7 +635,7 @@
       </div>
     </section><!-- End Contact Section -->
 
-    
+
            <!-- ======= Cta Section ======= -->
            <section id="cta" class="cta">
             <div class="container" data-aos="zoom-in">
