--- a/service.html
+++ b/service.html
@@ -49,18 +49,22 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto " href="../#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="../#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="../#about">About</a></li>
-          <li><a class="nav-link scrollto" href="../#team">Forecast</a></li>
-          <li><a class="nav-link scrollto " href="../#portfolio">Artists</a></li>
-          <li class="dropdown"><a href="#"><span>Rentals</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Rentals/Service</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="surf-rentals.html">Surf</a></li>
               <li><a href="snow-rentals.html">Snow</a></li>
+              <li><a href="service.html">Service</a></li>
             </ul>
           </li>
+          <li><a class="nav-link scrollto" href="../#team">Forecast</a></li>
+          <li><a class="nav-link scrollto " href="../#portfolio">Artists</a></li>
           <li><a class="nav-link scrollto" href="../#contact">Contact</a></li>
+          <li><a href="https://www.instagram.com/nxnwsurf/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a></li>
+          <li><a href="https://www.facebook.com/NxNWSURF" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a></li>
         </ul>
+    
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
@@ -74,9 +78,13 @@
    <!-- ======= Service Section ======= -->
    <section id="service" class="service">
     <div class="container" data-aos="fade-up">
+      
+      <div class="section-title-rentals">
+        <p>Service</p>
+      </div>
 
       <div class="section-title">
-        <h2><b>Service</b></h2>
+        <h2><b>Tune</b></h2>
         <p></p>
 
       <table cellspacing="0" border="0">
